[package]
name = "advent-of-code"
authors = ["Tim Kurvers"]
version = "0.1.0"
publish = false
edition = "2021"
default-run = "advent-of-code"

[[bin]]
name = "progress"
path = "src/progress.rs"

[dependencies]
colored = "2"
lazy_static = "1.4.0"
paste = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
