[package]
name = "advent_of_code"
authors = ["Tim Kurvers"]
version = "0.1.0"
publish = false
edition = "2021"
default-run = "runner"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[[bin]]
name = "progress"
path = "src/bin/progress.rs"

[dependencies]
colored = "2"
lazy_static = "1.4.0"
paste = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
